# freejtag

./: .gitignore  .gitmodules  LICENSE  LUFAConfig.h  Makefile  descriptors.h  dmbs.mk  freejtag.py  freejtag_pins.h  ocd.py  protcol.txt  protocol.txt
include/: LUFAConfig.h
pyjtag/: pyproject.toml
pyjtag/src/pyjtag/: jtag.py  ocdterm.py  util.py
pyjtag/src/pyjtag/backends/: freejtag.py
python/freejtag/: __main__.py  cdcacmbench.py  freejtag.py
src/: cdc.c  cdc.h  cdcacm.c  cdcacm.h  descriptors.c  descriptors.h  freejtag.c  freejtag.h  freejtag_pins.h  jtag.c  jtag.h  jtag_pins.h  main.c  tap.c  tap.h
